@@ -1,3 +1,10 @@
+2016-09-30 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/fiid/fiid.c (_fiid_template_check_valid_keys):
+	Remove expensive check in production builds.  The fall out by not
+	checking will be "key not found" errors on fiid_obj_get and
+	similar.
+
 2016-09-29 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/debug/ipmi-debug-lan.c (_ipmi_dump_lan_packet):
